--- a/src/View/Presentation/presentation.html.twig
+++ b/src/View/Presentation/presentation.html.twig
@@ -21,19 +21,19 @@
 
         {% for info in presentationInfo %}
 
-        <div class="row bloc">
+        <div class="row bloc {% if admin %}green-borders-top{% endif %}">
             <div class="col-12 col-md-6 text-center align-middle">
+                {% if admin %}
+                    <a href="/presentation/edit-{{ info.id }}" type="button" class="btn btn-success btn-modify">Modifier</a>
+                {% endif %}
                 <h2>{{ info.title }}</h2>
                 <img class="icone" src="{{ info.logo }}">
             </div>
             <div class="col-12 col-md-6">
                 {{ info.content|raw }}
-                {% if admin %}
-                <a href="/presentation/edit-{{ info.id }}" type="button" class="btn btn-success">Modifier</a>
-                {% endif %}
             </div>
         </div>
-        <div class="row">
+        <div class="row {% if admin %}green-borders-bottom{% endif %}"">
             <div class="col-xs-12 col-md-4 text-center">
                 <img src="{{ info.picture1 }}" alt="{{ info.title }} - Illustration 1" class="img-fluid miniature">
             </div>
