Affichage du nom utilisateur sur le bouton d'administration)

--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -34,7 +34,7 @@
                  id="admin-button"
                  data-toggle="modal"
                  data-target="#adminControlPanel"
-         ><i class="fas fa-cogs"></i> Administration</button>
+         ><i class="fas fa-cogs"></i> Admin ({{ admin }})</button>
 
          <!-- Modal -->
          <div class="modal fade" id="adminControlPanel" tabindex="-1" role="dialog" aria-labelledby="adminControlPanel" aria-hidden="true">
