season choice OK, nav and global rooting not !

--- a/src/View/Calendar/editMatch.html.twig
+++ b/src/View/Calendar/editMatch.html.twig
@@ -74,7 +74,7 @@
 
 
                     <button type="submit" class="btn btn-success">Enregistrer</button>
-                    <a href="/calendar" type="button" class="btn btn-primary">Retour au site</a>
+                    <a href="/calendar-2017-2018" type="button" class="btn btn-primary">Retour au site</a>
                 </form>
             </div>
         </div>
