--- a/src/View/Calendar/calendar.html.twig
+++ b/src/View/Calendar/calendar.html.twig
@@ -7,10 +7,19 @@
 
 {% block content %}
 
+
+
     <img src="assets/images/teams/coupe_quidditch.jpg" class="img-fluid img_coupe" alt="Responsive image">
       <div class="row title_calendar" id="title_calendar">
           <p>Calendrier</p>
       </div>
+
+        <select name="season" onchange="location = this.value;" >
+            {% for season in seasons %}
+            <option value="/calendar-{{ season.season }}" {% if season.season == currentSeason %}selected{% endif %}>{{ season.season }}</option>
+            {% endfor %}
+        </select>
+
 
 {% if admin %}
     <div class="container-fluid">
@@ -21,8 +30,6 @@
         </div>
     </div>
 {% endif %}
-
-
 
     {% for game in games %}
 
@@ -65,7 +72,7 @@
                                     </div>
                                     <div class="modal-body">
 
-                                        <a href="/calendar/delete-{{ game.id }}" type="button" class="btn btn-danger" style="font-family: 'DejaVu Sans'";
+                                        <a href="/calendar/delete-{# game.id #}" type="button" class="btn btn-danger" style="font-family: 'DejaVu Sans'";
                                         ><i class="far fa-trash-alt"></i> Supprimer</a>
                                         <a href="" type="button" class="btn btn-primary"  data-dismiss="modal" aria-label="Close" style="font-family: 'DejaVu Sans'";
                                         >Annuler</a>
