--- a/src/View/Calendar/calendar.html.twig
+++ b/src/View/Calendar/calendar.html.twig
@@ -35,7 +35,7 @@
                         <a href="/calendar/edit-{{ game.id }}" type="button"  style="font-family: 'DejaVu Sans'"; class="btn btn-success m-1 boutedit">
                             <i class="fas fa-wrench"></i>Editer le Match</a>
 
-                        <a href="/calendar/delete-{{ game.id }}" type="button" class="btn btn-danger boutdel" style="font-family: 'DejaVu Sans'";
+                        <a href="/calendar/delete-{{ game.id }}" type="button" class="btn btn-danger boutdel" ;
                            onclick='confirmationDelete($(this));return false;' href="";>
                             <i class="far fa-trash-alt"></i> Supprimer</a>
 
