--- a/src/View/Calendar/calendar.html.twig
+++ b/src/View/Calendar/calendar.html.twig
@@ -12,14 +12,18 @@
     <img src="assets/images/teams/coupe_quidditch.jpg" class="img-fluid img_coupe" alt="Responsive image">
       <div class="row title_calendar" id="title_calendar">
           <p>Calendrier</p>
+
+
+
       </div>
-
-        <select name="season" onchange="location = this.value;" >
-            {% for season in seasons %}
+<div class="seasonbox">
+    <h2>Saison :</h2>
+    <select name="season" onchange="location = this.value;" class="seasonselect" >
+        {% for season in seasons %}
             <option value="/calendar-{{ season.season }}" {% if season.season == currentSeason %}selected{% endif %}>{{ season.season }}</option>
-            {% endfor %}
-        </select>
-
+        {% endfor %}
+    </select>
+</div>
 
 {% if admin %}
     <div class="container-fluid">
