--- a/src/View/Navbar/globalNavbar.html.twig
+++ b/src/View/Navbar/globalNavbar.html.twig
@@ -17,7 +17,7 @@
         <a class="nav-link" href="/team">Equipe</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/calendar">Calendrier</a>
+        <a class="nav-link" href="/calendar-{{ thisSeason }}">Calendrier</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="/contact">Contact</a>
