--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -18,7 +18,7 @@
 /*      ADMIN          */
 /***********************/
 
-.boutedit, .boutdel
+.boutajout, .boutedit, .boutdel
 {
     margin: 4px;
     font-family: 'DejaVu Sans';
