Modification de mot de passe OK Messages d'erreur NOK

--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -47,7 +47,8 @@
                          </button>
                      </div>
                      <div class="modal-body">
-                         <a href="/logout" type="button" class="btn btn-danger"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
+                         <a href="/password-change" type="button" class="btn btn-danger"><i class="fas fa-expeditedssl"></i> Changer de mot de passe</a>
+                         <a href="/logout" type="button" class="btn btn-success"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
                      </div>
                  </div>
              </div>
