Modificaton de MDP + msg d'erreur OK

--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -26,6 +26,7 @@
 <body>
 
  {% block navbar %}{% include 'Navbar/globalNavbar.html.twig'%}{% endblock %}
+ {% block alert %}{% endblock %}
  {% block adminButton %}
      {% if admin %}
          <button
