--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -5,6 +5,13 @@
  <link rel="stylesheet" type="text/css" href="../assets/css/home.css">
 {% endblock %}
 {% block navbar %}{% include 'Navbar/homeNavbar.html.twig'%}{% endblock %}
+{% block alert %}
+    {% if alert %}
+        <div class="alert alert-success" role="alert">
+        {{ alert }}
+        </div>
+    {% endif %}
+{% endblock %}
 {% block footer %}{% endblock %}
 {% block content %}
     <div class="container-fluid">
