--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -18,3 +18,13 @@ h1{
     font-family: "DejaVu Sans";
     z-index: 100;
 }
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-body a {
+    margin: 5px;
+    font-family: "DejaVu Sans";
+}
