--- a/public/assets/css/presentation.css
+++ b/public/assets/css/presentation.css
@@ -89,7 +89,7 @@ textarea{
     position: absolute;
     top: 0;
     left: 0;
-    z-index: ;
+    font-family: "DejaVu Sans";
 }
 
 @media (max-width:992px) {
