--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -47,9 +47,9 @@
                              <span aria-hidden="true">&times;</span>
                          </button>
                      </div>
-                     <div class="modal-body">
-                         <a href="/password-change" type="button" class="btn btn-danger"><i class="fas fa-expeditedssl"></i> Changer de mot de passe</a>
-                         <a href="/logout" type="button" class="btn btn-success"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
+                     <div class="modal-body d-flex">
+                         <a href="/password-change" type="button" class="btn btn-success"><i class="fas fa-edit"></i> Changer mot de passe</a>
+                         <a href="/logout" type="button" class="btn btn-danger"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
                      </div>
                  </div>
              </div>
