Mise en place des liens et boutons

--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -39,6 +39,7 @@
                                                 required="required"
                                         >
                                     </div>
+                                    <a href="/password-reset" class="float-left">Vous avez oublié votre mot de passe ?</a>
                                     <button
                                             type="submit"
                                             class="btn btn-success btn-lg float-right"
