--- a/src/View/Presentation/edit.html.twig
+++ b/src/View/Presentation/edit.html.twig
@@ -37,26 +37,24 @@
                     <div class="form-group">
                         <h4 id="picture1-title">Photo n°1 actuelle :</h4>
                         <img src="{{ presentation.picture1 }}" alt="Picture 1" id="picture1-pic">
-                    </div>
-                    <div class="form-group">
                         <label for="picture1">Changer photo n°1</label>
-                        <input type="file" name="picture1" class="form-control-file" id="picture1" onchange="readURL1(this);">
+                        <input type="file" name="picture1" class="form-control-file" id="picture1" onchange="readURL(this);">
                     </div>
+
+
                     <div class="form-group">
                         <h4 id="picture2-title">Photo n°2 actuelle :</h4>
                         <img src="{{ presentation.picture2 }}" alt="Picture 2" id="picture2-pic">
-                    </div>
-                    <div class="form-group">
                         <label for="picture2">Changer photo n°2</label>
-                        <input type="file" name="picture2" class="form-control-file" id="picture2" onchange="readURL2(this);">
+                        <input type="file" name="picture2" class="form-control-file" id="picture2" onchange="readURL(this);">
                     </div>
+
+
                     <div class="form-group">
                         <h4 id="picture3-title">Photo n°3 actuelle :</h4>
                         <img src="{{ presentation.picture3 }}" alt="Picture 3" id="picture3-pic">
-                    </div>
-                    <div class="form-group">
                         <label for="picture3">Changer photo n°3</label>
-                        <input type="file" name="picture3" class="form-control-file" id="picture3" onchange="readURL3(this);">
+                        <input type="file" name="picture3" class="form-control-file" id="picture3" onchange="readURL(this);">
                     </div>
                     <button type="submit" class="btn btn-success">Enregistrer</button>
                     <a href="/presentation" type="button" class="btn btn-primary">Retour au site</a>
@@ -76,4 +74,3 @@
     });
 </script>
 {% endblock %}
- 
