--- a/src/View/Player/player.html.twig
+++ b/src/View/Player/player.html.twig
@@ -20,7 +20,8 @@
         {% for gardien in gardiens %}
             <div class="custom-card">
                 {% if admin %}
-                <a href="/team/edit-{{ gardien.id }}" type="button" class="btn btn-success btn-admin">Modifier</a>
+                <a href="/team/edit-{{ gardien.id }}" type="button" class="btn btn-success btn-admin">
+                    <i class="fas fa-wrench"></i> Modifier</a>
                 {% endif %}
                 <img class="custom-card-img" src="{{ gardien.picture }}" alt="Photo de {{ gardien.lastName }} {{ gardien.firstName }}">
                 <div class="custom-card-text">
@@ -45,7 +46,8 @@
         {% for poursuiveur in poursuiveurs %}
             <div class="custom-card">
                 {% if admin %}
-                    <a href="/team/edit-{{ poursuiveur.id }}" type="button" class="btn btn-success btn-admin">Modifier</a>
+                    <a href="/team/edit-{{ poursuiveur.id }}" type="button" class="btn btn-success btn-admin">
+                        <i class="fas fa-wrench"></i> Modifier</a>
                 {% endif %}
                 <img class="custom-card-img" src="{{ poursuiveur.picture }}" alt="Photo de {{ poursuiveur.lastName }} {{ poursuiveur.firstName }}">
                 <div class="custom-card-text">
@@ -70,7 +72,8 @@
         {% for batteur in batteurs %}
             <div class="custom-card">
                 {% if admin %}
-                    <a href="/team/edit-{{ batteur.id }}" type="button" class="btn btn-success btn-admin">Modifier</a>
+                    <a href="/team/edit-{{ batteur.id }}" type="button" class="btn btn-success btn-admin">
+                        <i class="fas fa-wrench"></i> Modifier</a>
                 {% endif %}
                 <img class="custom-card-img" src="{{ batteur.picture }}" alt="Photo de {{ batteur.lastName }} {{ batteur.firstName }}">
                 <div class="custom-card-text">
@@ -95,7 +98,8 @@
         {% for attrapeur in attrapeurs %}
             <div class="custom-card">
                 {% if admin %}
-                    <a href="/team/edit-{{ attrapeur.id }}" type="button" class="btn btn-success btn-admin">Modifier</a>
+                    <a href="/team/edit-{{ attrapeur.id }}" type="button" class="btn btn-success btn-admin">
+                        <i class="fas fa-wrench"></i> Modifier</a>
                 {% endif %}
                 <img class="custom-card-img" src="{{ attrapeur.picture }}" alt="Photo de {{ attrapeur.lastName }} {{ attrapeur.firstName }}">
                 <div class="custom-card-text">
