--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -48,9 +48,15 @@
                          </button>
                      </div>
                      <div class="modal-body d-flex">
-                         <a href="/password-change" type="button" class="btn btn-success"><i class="fas fa-edit"></i> Changer mot de passe</a>
-                         <a href="/password-reset" type="button" class="btn btn-primary"><i class="fas fa-undo-alt"></i> Réinitialiser mot de passe</a>
-                         <a href="/logout" type="button" class="btn btn-danger"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
+                         <a href="/password-change"
+                            type="button"
+                            class="btn btn-success"><i class="fas fa-edit"></i> Changer mot de passe</a>
+                         <a href="/password-reset"
+                            type="button"
+                            class="btn btn-primary"><i class="fas fa-undo-alt"></i> Réinitialiser mot de passe</a>
+                         <a href="/logout"
+                            type="button"
+                            class="btn btn-danger"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
                      </div>
                  </div>
              </div>
