--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -48,8 +48,8 @@
     margin-left: 5%;
 */
     height: 40px;
-    background-color: #333333;
-    color: #EEEEEE;
+    background-color: #cd900e;
+    color: #480405;
     font-size: 20px;
 
 }
