--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -81,7 +81,7 @@ ul#Contact__informations a i {
     margin-bottom: 1em;
 }
 
-#Contact__informations svg path {
+.icons svg path {
     fill: #D6AE1D!important;
 }
 
@@ -138,7 +138,7 @@ form .form--item textarea {
 
 }
 
-form .submit_button, .btn-custom{
+form .submit_button{
     background-color: #833E2F;
     color: white;
     display: inline-block;
@@ -158,20 +158,10 @@ form .submit_button, .btn-custom{
     transition: color .15s;
 }
 
-.btn-custom:hover{
-    color: white;
-    background-color: #a64a4a;
-}
-
-.btn-custom{
-    margin: 40px 10px;
-}
-
 .btn-admin{
-    color: white;
+    color: white!important;
     font-family: "DejaVu Sans";
 }
-
 
 /* map */
 #Contact__map {
