--- a/public/assets/css/presentation.css
+++ b/public/assets/css/presentation.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 80px;
+}
+
 .presentation body {
 
     background-color: #dbd5d4;
@@ -7,8 +11,6 @@
 
 
 .presentation h1{
-    margin-top: 70px;
-    margin-bottom: 100px;
     color: #d6ae1d;
 }
 
