--- a/src/View/Admin/resetPassword.html.twig
+++ b/src/View/Admin/resetPassword.html.twig
@@ -9,13 +9,8 @@
                     <div class="col-md-6 mx-auto">
                         <div class="card rounded-0">
                             <div class="card-header">
-                                <h3 class="mb-0">Connection</h3>
+                                <h3 class="mb-0">Réinitialisation de mot de passe</h3>
                             </div>
-                            {% if errorCode != "" %}
-                                <div class="alert alert-danger" role="alert">
-                                    {{ errorCode }}
-                                </div>
-                            {% endif %}
                             <div class="card-body">
                                 <form class="form" role="form" id="formLogin" method="POST">
                                     <div class="form-group">
@@ -25,26 +20,32 @@
                                                 class="form-control form-control-lg rounded-0"
                                                 name="login"
                                                 id="login"
-                                                value="{{ login }}"
+                                                value="{{ admin }}"
                                                 required="required"
+                                                placeholder="Entrez ici votre identifiant"
                                         >
                                     </div>
                                     <div class="form-group">
-                                        <label>Mot de passe</label>
+                                        <label for="login">Adresse email</label>
                                         <input
-                                                type="password"
+                                                type="email"
                                                 class="form-control form-control-lg rounded-0"
-                                                id="password"
-                                                name="password"
+                                                name="email"
+                                                id="email"
                                                 required="required"
+                                                placeholder="Entrez ici l'adresse email liée à votre compte"
                                         >
                                     </div>
-                                    <a href="/password-reset" class="float-left">Vous avez oublié votre mot de passe ?</a>
                                     <button
                                             type="submit"
                                             class="btn btn-success btn-lg float-right btn-custom"
                                             id="btnLogin"
                                     >Valider</button>
+                                    <a
+                                            href="{{ redirection.link }}"
+                                            type="button"
+                                            class="btn btn-primary btn-lg float-right btn-custom"
+                                    >{{ redirection.title }}</a>
                                 </form>
                             </div>
                         </div>
