--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -8,7 +8,12 @@
 {% block alert %}
     {% if alert %}
         <div class="alert alert-success" role="alert">
-        {{ alert }}
+            {{ alert }}
+        </div>
+    {% endif %}
+    {% if reset %}
+        <div class="alert alert-info" role="alert">
+            {{ reset|raw }}
         </div>
     {% endif %}
 {% endblock %}
